--- a/app/src/main/res/layout/dialog_fullscreen_add_photo.xml
+++ b/app/src/main/res/layout/dialog_fullscreen_add_photo.xml
@@ -41,6 +41,7 @@
                 app:srcCompat="@drawable/ic_clear_grey_24dp" />
 
             <TextView
+                android:id="@+id/dialogTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
