--- a/app/src/main/res/layout/item_social_media.xml
+++ b/app/src/main/res/layout/item_social_media.xml
@@ -79,7 +79,7 @@
 
 
 
-        <ImageView
+        <ImageButton
             android:id="@+id/like_number_image"
             android:layout_width="24dp"
             android:layout_height="24dp"
@@ -89,10 +89,11 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="@id/title"
             app:srcCompat="@drawable/ic_like_enable"
+            android:background="?android:selectableItemBackground"
             />
 
 
-        <ImageView
+        <ImageButton
             android:id="@+id/delete_button"
             android:layout_width="24dp"
             android:layout_height="24dp"
@@ -102,9 +103,10 @@
             app:layout_constraintRight_toRightOf="@id/title"
             app:srcCompat="@drawable/ic_delete_black_24dp"
             android:tint="@color/black_three"
+            android:background="?android:selectableItemBackground"
             />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/update_button"
             android:layout_width="24dp"
             android:layout_height="24dp"
@@ -114,7 +116,7 @@
             app:layout_constraintBottom_toBottomOf="@id/profile_image"
             app:layout_constraintRight_toLeftOf="@id/delete_button"
             app:srcCompat="@drawable/ic_update_black_24dp"
-
+            android:background="?android:selectableItemBackground"
             />
 
 
