--- a/app/src/main/res/layout/item_social_media.xml
+++ b/app/src/main/res/layout/item_social_media.xml
@@ -98,7 +98,7 @@
 
 
         <ImageButton
-            android:id="@+id/delete_button"
+            android:id="@+id/more_button"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:contentDescription="@string/description_image"
@@ -106,24 +106,11 @@
             app:layout_constraintBottom_toBottomOf="@id/username"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginEnd="15dp"
-            app:srcCompat="@drawable/ic_delete_black_24dp"
+            app:srcCompat="@drawable/ic_open_menu"
             android:tint="@color/black_three"
             android:background="?android:selectableItemBackground"
+            android:onClick="showPopup"
             />
-
-        <ImageButton
-            android:id="@+id/update_button"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:contentDescription="@string/description_image"
-            app:layout_constraintTop_toTopOf="@id/profile_image"
-            app:layout_constraintBottom_toBottomOf="@id/profile_image"
-            app:layout_constraintRight_toLeftOf="@id/delete_button"
-            app:srcCompat="@drawable/ic_update_black_24dp"
-            android:layout_marginEnd="10dp"
-            android:background="?android:selectableItemBackground"
-            />
-
 
         <TextView
             android:id="@+id/like_number"
