--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -111,6 +111,14 @@
                 android:layout_gravity="center"
                 android:src="@drawable/logo"
                 android:contentDescription="@string/description_image" />
+            
+            <TextView
+                android:id="@+id/appVersion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_gravity="center"
+                android:text="V1.0.0"/>
 
         </LinearLayout>
 
