--- a/app/src/main/res/layout/item_recipes_list_database.xml
+++ b/app/src/main/res/layout/item_recipes_list_database.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/recipe_list_database_row_id"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -83,7 +83,7 @@
             android:layout_height="0.5dp"
             android:layout_marginTop="15dp"
             android:background="@color/colorAccent"
-            app:layout_constraintTop_toBottomOf="@id/description"
+            app:layout_constraintTop_toBottomOf="@id/recipe_day_selected"
             app:layout_constraintLeft_toLeftOf="@id/title"
             app:layout_constraintRight_toRightOf="@id/title"
             />
@@ -163,23 +163,26 @@
             />
 
         <TextView
-            android:id="@+id/description"
+            android:id="@+id/recipe_day_selected"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_margin"
-            android:text="@string/recipe_list_item_kcal"
+            tools:text="Lundi"
             app:layout_constraintLeft_toLeftOf="@id/title"
             app:layout_constraintTop_toBottomOf="@id/title" />
 
 
-        <TextView
-            android:id="@+id/fragment_recipes_list_item_kcal_unit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/little_margin"
-            android:text="@string/recipe_list_item_kcal"
-            app:layout_constraintLeft_toRightOf="@id/description"
-            app:layout_constraintTop_toTopOf="@id/description" />
+        <ImageButton
+            android:id="@+id/select_date_button"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/ic_like_disable"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            app:layout_constraintRight_toRightOf="@id/view"
+            app:layout_constraintTop_toBottomOf="@id/title"
+            app:layout_constraintBottom_toTopOf="@id/view"/>
 
 
 
