--- a/app/src/main/res/layout-v21/item_recipes_list_database.xml
+++ b/app/src/main/res/layout-v21/item_recipes_list_database.xml
@@ -166,11 +166,16 @@
 
         <TextView
             android:id="@+id/recipe_day_selected"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_margin"
-            tools:text="Lundi"
-            app:layout_constraintLeft_toLeftOf="@id/title"
+            android:layout_marginEnd="15dp"
+            tools:text="Lundi djskjskj sksjkjskjsd kkjsdkjskdjs skskdkjkjds"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:maxLength="70"
+            app:layout_constraintStart_toStartOf="@id/title"
+            app:layout_constraintEnd_toStartOf="@id/select_date_button"
             app:layout_constraintTop_toBottomOf="@id/title" />
 
 
