--- a/app/src/main/res/layout/item_dialog_select_day.xml
+++ b/app/src/main/res/layout/item_dialog_select_day.xml
@@ -35,6 +35,7 @@
         app:singleSelection="true">
 
         <com.google.android.material.chip.Chip
+            android:id="@+id/lunch_chips"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
@@ -46,6 +47,7 @@
             android:theme="@style/Theme.MaterialComponents.Light"/>
 
         <com.google.android.material.chip.Chip
+            android:id="@+id/snack_chips"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
@@ -57,6 +59,7 @@
             android:theme="@style/Theme.MaterialComponents.Light"/>
 
         <com.google.android.material.chip.Chip
+            android:id="@+id/dinner_chips"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
