--- a/app/src/main/res/layout/activity_search_ingredients.xml
+++ b/app/src/main/res/layout/activity_search_ingredients.xml
@@ -1,30 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".ingredientslist.ui.SearchIngredientsActivity"
-android:orientation="vertical">
-
-<!-- Toolbar -->
-<include
-    layout="@layout/toolbar" />
-
-<com.google.android.material.tabs.TabLayout
-    android:id="@+id/tabs"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:tabMode="fixed"
-    android:background="?attr/colorPrimaryDark"
-    android:minHeight="?attr/actionBarSize"
-    app:tabGravity="fill"
-    app:tabTextColor="@color/colorAccent"
-    app:tabIconTint="@color/colorWhite"
-    app:tabSelectedTextColor="@color/colorAccent"
-    app:tabIndicatorColor="@color/colorWhite"
-    />
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".ingredientslist.ui.SearchIngredientsActivity">
+
+    <!-- Toolbar -->
+    <include layout="@layout/toolbar" />
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimaryDark"
+        android:minHeight="?attr/actionBarSize"
+        app:tabGravity="fill"
+        app:tabIconTint="@color/colorWhite"
+        app:tabIndicatorColor="@color/colorWhite"
+        app:tabMode="fixed"
+        app:tabSelectedTextColor="@color/colorAccent"
+        app:tabTextColor="@color/colorAccent" />
+
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/pager"
         android:layout_width="match_parent"
